--- a/majas_lapa/style.css
+++ b/majas_lapa/style.css
@@ -1,19 +1,84 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+}
+.container {
+    display: flex;
+    height: 100vh;
+}
 .header{
-    background-color: rgb(184, 182, 176);
-    padding: 50px;
-    height: 40px;
-    width: 1000px;
+    background-color: rgb(128, 167, 107);
+    padding: 30px;
+    text-align: center;
 }
 .content{
-    background-color: rgb(195, 195, 156);
-    padding: 200px;
-    height: 500px;
-    width: 700px;
+    background-color: rgb(182, 238, 180);
+    padding: 30px;
+    flex: 1;
+    overflow-y: auto;
+}
+
+.Apraksts{
+    background-color: rgb(138, 167, 130);
+    padding: 20px;
+    flex: 1;
+    min-width: 100px;
+}
+.Attels{
+  background-color: rgb(62, 95, 63);
+  padding: 20px;
+  flex: 1;
+  
+}
+.tekstsAttels{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+.zanri {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+.zanrs {
+   background-color: beige;
+    padding: 40px;
+    flex: 1;
+    min-width: 100px;
+ }
+.attels2 {
+  background-color: white;
+  flex: 1;
+  padding: 5px;
+  
 }
 .footer{
-    background-color: rgb(224, 219, 171);
+    background-color: rgb(191, 231, 199);
+    text-align: center;
+} 
+.spele {
+    background-color: white;
     padding: 20px;
-    height: 50px;
-    width: 1060px;
+    margin: 20px auto;
+    text-align: center;
+    max-width: 500px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+#mansZimejums {
+    background-color: rgb(196, 196, 168);
+    width: 300px;
+    height: 300px;
+    border: 3px solid;
 }
-    
+#spele {
+    background-color: rgb(155, 155, 109);
+    width: 150px;
+    height: 150px;
+}
