--- a/majas_lapa/style.css
+++ b/majas_lapa/style.css
@@ -71,6 +71,7 @@ body {
     max-width: 500px;
     border: 2px solid #ccc;
     border-radius: 10px;
+}
 #mansZimejums {
     background-color: rgb(196, 196, 168);
     width: 300px;
